--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
         <span> Para más información</span>
       </div>
       <div>
-        <div class="flex align-center  gap-md">
+        <div class="flex align-center  gap-md justify-center">
           <span class="material-symbols-outlined"> call </span>
           <span> +51 989 752 595</span>
         </div>
-        <div class="flex align-center gap-md">
+        <div class="flex align-center gap-md justify-center">
           <span class="material-symbols-outlined"> mail </span>
           <span> contacto@safeguard.com</span>
         </div>
